--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Online Competition Math Prep</title>
     <meta charset="UTF-8"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
         .ul {
@@ -24,14 +28,8 @@
          }
          li {
             text-align: center;
-            margin-left: 0.1%;
-            margin-right: 0.1%;
-            padding-left: 0.2;
-            padding-right: 0.2%;
          }
          button {
-            margin-left: 1%;
-            margin-right: 1%;
             
          }
     </style>
@@ -39,42 +37,61 @@
 
 <body>
 
-<div class = "container">
-    <div class="container">
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top px-2">
+<div class=container-fluid>
+
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top px-2">   
+            <a class="navbar-brand" href="#home">
+                <img src="assets/logo.png" alt="Logo" style="width:250px;"> 
+            </a>
             <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>   
             </button>   
-            <a class="navbar-brand" href="#">
-                <img src="math_prep_logo.png" alt="Logo" style="width:250px;"> 
-            </a>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link scrollto active" style="font-family: 'Poppins', sans-serif;" href="#">Home</a>
+                        <a class="nav-link scrollto active px-3" style="font-family: 'Poppins', sans-serif;" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link scrollto" style="font-family: 'Poppins', sans-serif;" href="#">About Us</a>
+                        <a class="nav-link scrollto px-3" style="font-family: 'Poppins', sans-serif;" href="#">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" style="font-family: 'Poppins', sans-serif;" href="#" role="button" data-bs-toggle="dropdown">Competitions</a>
+                        <a class="nav-link dropdown-toggle px-3" style="font-family: 'Poppins', sans-serif;" href="#" role="button" data-bs-toggle="dropdown">Competitions</a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a class="dropdown-item" style="font-family: 'Poppins', sans-serif;" href=#>MATHCOUNTS</a>
+                                <a class="dropdown-item px-3" style="font-family: 'Poppins', sans-serif;" href=#>MATHCOUNTS</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" style="font-family: 'Poppins', sans-serif;" href=#>AMC 8</a>
+                                <a class="dropdown-item px-3" style="font-family: 'Poppins', sans-serif;" href=#>AMC 8</a>
                             </li>
                         </ul>
                     </li>
+                    <button class="btn btn-success">
+                        Log In 
+                    </button>
                 </ul>
             </div>
         </nav>
     </div>
 
-    <div class="container p-5 my-5 bg-dark">
-            <h1 id="myHeader"></h1>
-            <h2 style="color:white;"></h2>
+    <section id="home" class="d-flex align-items-center">
+
+        <div class="container p-5 my-5 bg-dark">
+            <div class="row">
+                <div class="col-sm-8">
+                    <h1 style="color:white; font-family: 'Oxygen', sans-serif;">ONLINE COMPETITION MATH PREP</h1>
+                    <h4 style="color:white; font-family: 'Oxygen', sans-serif;">by Ryan</h4>
+                    <hr> <hr> <hr>
+                    <h2 style="color:white; font-family: 'Oxygen', sans-serif;">Helping You Get the Edge Above Everyone Else!</h2>
+                </div>
+                <div class="img-fluid img-responsive col-sm-4">
+                    <img src="assets/math1.jpg">
+                </div>
+            </div>
+        </div>
+    
+    </section>
+
 </div>
 
 </body>
