--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="assets/main.js"></script>
 
-    <title>Online Competition Math Prep</title>
+    <title>Online Competition Math Prep</tistle>
     <meta charset="UTF-8"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
@@ -111,8 +112,8 @@
                 <div class="col-lg-3 pt-4 pt-lg-0">
                     <img src="assets/mathcounts.png" style="width:100%" alt="Mathcounts"/>
                 </div>
-                <div class="col-lg-3 pt-4 pt-lg-0">
-                    <img src="assets/maa.png" style="width:100%" alt="AMC"/>
+                    <div class="col-lg-3 pt-4 pt-lg-0">
+                        <img src="assets/maa.png" style="width:100%" alt="AMC"/>
                 </div>
             </div>
   
@@ -132,7 +133,7 @@
                     <div class="info contact-about">
                         <h3>Online Competition Math Prep</h3>
                         <p>Feel free to contact us about anything!</p>
-                        <p>Based in San Diego, California, USA</p>
+                        <p>Based in San Diego, California, USA</p>      
                     </div>
                 </div>
   
