--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/main.js"></script>
 
-    <title>Online Competition Math Prep</tistle>
+    <title>Online Competition Math Prep</title>
     <meta charset="UTF-8"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"/>
-    
+
     <link href="assets/css/style.css" rel="stylesheet"/>
 
     <style>
@@ -45,13 +45,13 @@
 <div class="container-fluid">
 
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top px-2">   
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top px-2">
             <a class="navbar-brand" href="#home">
-                <img src="assets/logo.png" alt="Logo" style="width:250px;"/> 
+                <img src="assets/logo.png" alt="Logo" style="width:250px;"/>
             </a>
             <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>   
-            </button>   
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -81,33 +81,34 @@
 
         <div class="container p-5 my-5 bg-dark">
             <div class="row content">
-                <div class="col-xl-8 col-lg-7 col-md-12">
+                <div class="col-lg-8 col-sm-12">
                     <h1 style="color:white; font-family: 'Oxygen', sans-serif;">ONLINE COMPETITION MATH PREP</h1>
                     <h4 style="color:white; font-family: 'Oxygen', sans-serif;">by Ryan</h4>
-                    <br/> <br/> <br/>
+                    <br/>
                     <h2 style="color:white; font-family: 'Oxygen', sans-serif;">Helping You Get the Edge Above Everyone Else!</h2>
+                    <br/>
                 </div>
-                <div class="col-xl-4 col-lg-5 col-md-12">
-                    <div class="img-content">
-                        <img src="assets/math1.jpg" alt="Math"/>
+                <div class="col-lg-4 col-sm-12">
+                    <div class="img-content" style="text-align: center;">
+                        <img class="rounded" src="assets/math1.jpg" alt="Math"/>
                     </div>
                 </div>
             </div>
         </div>
-    
+
     </section>
 
     <section id="about">
         <div class="container">
-  
+
             <div class="section-title">
                 <h2>What is OCMP?</h2>
             </div>
-  
-            <div class="row content">   
+
+            <div class="row content">
                 <div class="col-lg-6">
                     <p>Online Competition Math Prep was created by students, for students. As a student who took many math competitions and still loves math, I have a lot of experience and have valuable insights to share across many different topics that can help students gain an edge in math competitions over others.</p>
-                    <a href="#" class="btn-call">Learn More</a> 
+                    <a style="margin-left: 33%;" href="#" class="btn-call">Learn More</a>
                 </div>
                 <div class="col-lg-3 pt-4 pt-lg-0">
                     <img src="assets/mathcounts.png" style="width:100%" alt="Mathcounts"/>
@@ -116,28 +117,28 @@
                         <img src="assets/maa.png" style="width:100%" alt="AMC"/>
                 </div>
             </div>
-  
+
         </div>
     </section>
 
     <section id="contact" class="contact">
         <div class="container">
-  
+
             <div class="section-title">
                 <h2>Contact Us</h2>
             </div>
-  
+
             <div class="row">
-  
+
                 <div class="col-lg-6 col-md-12">
                     <div class="info contact-about">
                         <h3>Online Competition Math Prep</h3>
                         <p>Feel free to contact us about anything!</p>
-                        <p>Based in San Diego, California, USA</p>      
+                        <p>Based in San Diego, California, USA</p>
                     </div>
                 </div>
-  
-  
+
+
                 <div class="col-lg-6 col-md-12">
                     <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                         <div class="form-group">
@@ -155,9 +156,9 @@
                         <a href="#" class="btn-submit">Send Message</a>
                     </form>
                 </div>
-  
+
             </div>
-  
+
         </div>
       </section>
 
