Centered more content in body

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                         <img class="rounded" src="assets/math1.jpg" alt="Math"/>
                     </div>
                 </div>
+
             </div>
         </div>
 
@@ -105,21 +106,20 @@
                 <h2>What is OCMP?</h2>
             </div>
 
-            <div class="row content">
-                <div class="col-lg-6">
+            <div class="row content" style="text-align: center;">
+                <div>
                     <p>Online Competition Math Prep was created by students, for students. As a student who took many math competitions and still loves math, I have a lot of experience and have valuable insights to share across many different topics that can help students gain an edge in math competitions over others.</p>
-                    <a style="margin-left: 33%;" href="#" class="btn-call">Learn More</a>
-                </div>
-                <div class="col-lg-3 pt-4 pt-lg-0">
-                    <img src="assets/mathcounts.png" style="width:100%" alt="Mathcounts"/>
-                </div>
-                    <div class="col-lg-3 pt-4 pt-lg-0">
-                        <img src="assets/maa.png" style="width:100%" alt="AMC"/>
+                    <a href="#" class="btn-call">Learn More</a>
                 </div>
             </div>
 
         </div>
     </section>
+
+    <div style="text-align: center; margin-top: 30px; margin-bottom: 30px;">
+      <img class="rounded" src="assets/mathcounts.png" style="width:25%" alt="Mathcounts"/>
+      <img class="rounded" src="assets/maa.png" style="width:25%" alt="AMC"/>
+    </div>
 
     <section id="contact" class="contact">
         <div class="container">
@@ -153,7 +153,7 @@
                         <div class="form-group">
                             <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                         </div>
-                        <a href="#" class="btn-submit">Send Message</a>
+                        <a style="text-align: center;" href="#" class="btn-submit">Send Message</a>
                     </form>
                 </div>
 
