--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link scrollto active px-3" style="font-family: 'Poppins', sans-serif;" href="#home">Home</a>
+                <ul class="navbar-nav" style="width: 100%;">
+                    <li class="nav-item" style="margin-left: auto; margin-right: auto;">
+                        <a class="nav-link scrollto active px-3" style="font-family: 'Poppins', sans-serif; border-radius: 30px; height: 50px; width: 110px; padding-top: 12.5px;" href="#home">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" style="margin-left: auto; margin-right: auto;">
                         <a class="nav-link scrollto px-3" style="font-family: 'Poppins', sans-serif;" href="#">About Us</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown" style="margin-left: auto; margin-right: auto;">
                         <a class="nav-link dropdown-toggle px-3" style="font-family: 'Poppins', sans-serif;" href="#" role="button" data-bs-toggle="dropdown">Competitions</a>
                         <ul class="dropdown-menu">
                             <li>
@@ -71,7 +71,7 @@
                             </li>
                         </ul>
                     </li>
-                    <a href="#" class="btn-call">Log In</a>
+                    <a style="margin-left: auto; margin-right: auto;" href="#" class="btn-call">Log In</a>
                 </ul>
             </div>
         </nav>
