--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="assets/main.js"></script>
+    <script src="assets/js/main.js"></script>
 
-    <title>Online Competition Math Prep</tistle>
+    <title>Online Competition Math Prep</title>
     <meta charset="UTF-8"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
