Added other pages and made visual changes.

--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
                 <span class="navbar-toggler-icon"></span>   
             </button>   
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link scrollto active px-3" style="font-family: 'Poppins', sans-serif;" href="#home">Home</a>
+                <ul class="navbar-nav pagination">
+                    <li class="nav-item page-item">
+                        <a class="nav-link scrollto active px-3" style="font-family: 'Poppins', sans-serif;" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link scrollto px-3" style="font-family: 'Poppins', sans-serif;" href="#">About Us</a>
+                    <li class="nav-item page-item">
+                        <a class="nav-link scrollto px-3" style="font-family: 'Poppins', sans-serif;" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle px-3" style="font-family: 'Poppins', sans-serif;" href="#" role="button" data-bs-toggle="dropdown">Competitions</a>
+                        <a class="nav-link dropdown-toggle px-3" style="font-family: 'Poppins', sans-serif;" role="button" data-bs-toggle="dropdown">Competitions</a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a class="dropdown-item px-3" style="font-family: 'Poppins', sans-serif;" href=#>MATHCOUNTS</a>
+                                <a class="dropdown-item px-3 page-item" style="font-family: 'Poppins', sans-serif;" href="mathcounts.html">MATHCOUNTS</a>
                             </li>
                             <li>
-                                <a class="dropdown-item px-3" style="font-family: 'Poppins', sans-serif;" href=#>AMC 8</a>
+                                <a class="dropdown-item px-3 page-item" style="font-family: 'Poppins', sans-serif;" href="amc8.html">AMC 8</a>
                             </li>
                         </ul>
                     </li>
@@ -84,7 +84,11 @@
   
             <div class="row content">   
                 <div class="col-lg-6">
-                    <p>Online Competition Math Prep was created by students, for students. As a student who took many math competitions and still loves math, I have a lot of experience and have valuable insights to share across many different topics that can help students gain an edge in math competitions over others.</p>
+                    <p>OCMP is a website that has all of the resources, lessons, and materials that YOU NEED to succeed in math competitions. </p>
+                    <p>We have:</p>
+                    <p>&nbsp;&nbsp;&nbsp;- Study Guides of Theorems and Concepts to Know</p>
+                    <p>&nbsp;&nbsp;&nbsp;- Links to Useful Resources and Practice Problems</p>
+                    <p>&nbsp;&nbsp;&nbsp;- In-Depth Descriptions of Formulas and Theorems with Examples</p>
                     <a href="#" class="btn-call">Learn More</a>
                 </div>
                 <div class="col-lg-3 pt-4 pt-lg-0">
@@ -110,8 +114,10 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="info contact-about">
                         <h3>Online Competition Math Prep</h3>
-                        <p>Feel free to contact us about anything!</p>
-                        <p>Based in San Diego, California, USA</p>      
+                        <p style="margin-top:25px;">Feel free to contact us about anything!</p>
+                        <p>Based in San Diego, California, USA</p>    
+                        <p style="margin-top:75px;">(you won't get a response)</p> 
+                        <p>(this form doesn't even work)</p> 
                     </div>
                 </div>
   
@@ -136,7 +142,7 @@
             </div>
   
         </div>
-      </section>
+    </section>
 
 </div>
 
